tests/ui/errors/snapshots/infer_statement_as_tail_result_value_suggests_ok_value.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Missing value at end of block
   ╭─[test.lis:4:3]
 3 │   let mut sum = 0
 4 │   sum = 42
   ·   ────┬───
   ·       ╰── produces `()`
 5 │ }
   ╰────
  help: This block is of type `()` because its last expression produces `()`, but the block was expected to be of type `Result<int, error>`. End the block with `Ok(value)` or `Err(...)` · code: [infer.statement_as_tail]
