tests/ui/errors/snapshots/infer_stringer_signature_mismatch_lowercase_extra_param.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Reserved method signature
   ╭─[test.lis:5:6]
 4 │ impl A {
 5 │   fn string(self, prefix: string) -> string {
   ·      ───┬──
   ·         ╰── `string` must have signature `(self) -> string`
 6 │     prefix + self.a
   ╰────
  help: `string` is reserved for the Go `fmt.Stringer` (or `fmt.GoStringer`) interface and is auto-emitted by Lisette. Either change the signature to `(self) -> string`, or rename the method · code: [infer.stringer_signature_mismatch]
