tests/ui/errors/snapshots/infer_stringer_signature_mismatch_returns_int.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Reserved method signature
   ╭─[test.lis:5:6]
 4 │ impl A {
 5 │   fn String(self) -> int {
   ·      ───┬──
   ·         ╰── `String` must have signature `(self) -> string`
 6 │     42
   ╰────
  help: `String` is reserved for the Go `fmt.Stringer` (or `fmt.GoStringer`) interface and is auto-emitted by Lisette. Either change the signature to `(self) -> string`, or rename the method · code: [infer.stringer_signature_mismatch]
