tests/ui/errors/snapshots/infer_struct_autofill_no_zero_for_go_interface_field.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Field has no zero value
   ╭─[test.lis:7:21]
 6 │ fn test() {
 7 │   let w = Wrapper { .. };
   ·                     ─┬
   ·                      ╰── no zero available
 8 │ }
   ╰────
  help: Field `ctx` of type `Context` has no zero value. Provide an explicit value, or wrap the field type in `Option<T>` · code: [infer.field_no_zero]
