tests/ui/errors/snapshots/infer_struct_enum_variant_as_bare_value.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Cannot use enum variant as value
   ╭─[test.lis:7:11]
 6 │ fn main() {
 7 │   let a = A.Test
   ·           ───┬──
   ·              ╰── used as value
 8 │   let _ = a
   ╰────
  help: Instantiate the variant: `A.Test { field: value, ... }` · code: [infer.enum_variant_constructor_value]
